--- a/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
+++ b/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Books.cs" />
+    <Compile Include="BooksData.cs" />
     <Compile Include="clsDataAccessSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
