--- a/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
+++ b/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorsData.cs" />
     <Compile Include="BooksData.cs" />
     <Compile Include="clsDataAccessSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
