--- a/LibraryPresentationLayer/LibraryPresentationLayer.csproj
+++ b/LibraryPresentationLayer/LibraryPresentationLayer.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmBooksWrotedByAuthor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBooksWrotedByAuthor.Designer.cs">
+      <DependentUpon>frmBooksWrotedByAuthor.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAddEditBooks.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmBooksWrotedByAuthor.resx">
+      <DependentUpon>frmBooksWrotedByAuthor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAddEditBooks.resx">
       <DependentUpon>frmAddEditBooks.cs</DependentUpon>
     </EmbeddedResource>
