--- a/LibraryBussinessLayer/LibraryBussinessLayer.csproj
+++ b/LibraryBussinessLayer/LibraryBussinessLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Authors.cs" />
     <Compile Include="Books.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibraryDataAccessLayer\LibraryDataAccessLayer.csproj">
