--- a/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
+++ b/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BooksData.cs" />
     <Compile Include="clsDataAccessSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsersData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
