--- a/LibraryBussinessLayer/LibraryBussinessLayer.csproj
+++ b/LibraryBussinessLayer/LibraryBussinessLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Authors.cs" />
     <Compile Include="Books.cs" />
+    <Compile Include="BorrowingLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
