--- a/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
+++ b/LibraryDataAccessLayer/LibraryDataAccessLayer.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="AuthorsData.cs" />
     <Compile Include="BooksData.cs" />
-    <Compile Include="BorroingLibData.cs" />
+    <Compile Include="BorrowingLibData.cs" />
     <Compile Include="clsDataAccessSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersData.cs" />
