--- a/LibraryPresentationLayer/LibraryPresentationLayer.csproj
+++ b/LibraryPresentationLayer/LibraryPresentationLayer.csproj
@@ -52,6 +52,12 @@
     <Compile Include="frmAddEditUser.Designer.cs">
       <DependentUpon>frmAddEditUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAuthorToChoose.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAuthorToChoose.Designer.cs">
+      <DependentUpon>frmAuthorToChoose.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAuthorWhoWroteTheBook.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAddEditUser.resx">
       <DependentUpon>frmAddEditUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAuthorToChoose.resx">
+      <DependentUpon>frmAuthorToChoose.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAuthorWhoWroteTheBook.resx">
       <DependentUpon>frmAuthorWhoWroteTheBook.cs</DependentUpon>
