--- a/LibraryPresentationLayer/LibraryPresentationLayer.csproj
+++ b/LibraryPresentationLayer/LibraryPresentationLayer.csproj
@@ -100,11 +100,11 @@
     <Compile Include="frmBorrowReturnBooks.Designer.cs">
       <DependentUpon>frmBorrowReturnBooks.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmEditAddAuthors.cs">
+    <Compile Include="frmAddEditAuthors.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmEditAddAuthors.Designer.cs">
-      <DependentUpon>frmEditAddAuthors.cs</DependentUpon>
+    <Compile Include="frmAddEditAuthors.Designer.cs">
+      <DependentUpon>frmAddEditAuthors.cs</DependentUpon>
     </Compile>
     <Compile Include="frmMainMenu.cs">
       <SubType>Form</SubType>
@@ -147,8 +147,8 @@
     <EmbeddedResource Include="frmBorrowReturnBooks.resx">
       <DependentUpon>frmBorrowReturnBooks.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmEditAddAuthors.resx">
-      <DependentUpon>frmEditAddAuthors.cs</DependentUpon>
+    <EmbeddedResource Include="frmAddEditAuthors.resx">
+      <DependentUpon>frmAddEditAuthors.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMainMenu.resx">
       <DependentUpon>frmMainMenu.cs</DependentUpon>
