Added GlobalUser in PL for storing logged in user info

--- a/LibraryPresentationLayer/LibraryPresentationLayer.csproj
+++ b/LibraryPresentationLayer/LibraryPresentationLayer.csproj
@@ -118,6 +118,7 @@
     <Compile Include="frmUsers.Designer.cs">
       <DependentUpon>frmUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="GlobalUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAddEditUser.resx">
