--- a/LibraryPresentationLayer/LibraryPresentationLayer.csproj
+++ b/LibraryPresentationLayer/LibraryPresentationLayer.csproj
@@ -64,6 +64,12 @@
     <Compile Include="frmAuthorWhoWroteTheBook.Designer.cs">
       <DependentUpon>frmAuthorWhoWroteTheBook.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmBookAdditionalInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBookAdditionalInfo.Designer.cs">
+      <DependentUpon>frmBookAdditionalInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmBooksWrotedByAuthor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,12 @@
     </Compile>
     <Compile Include="frmBooks.Designer.cs">
       <DependentUpon>frmBooks.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="frmMyLibrary.cs">
       <SubType>Form</SubType>
@@ -130,6 +142,9 @@
     <EmbeddedResource Include="frmAuthorWhoWroteTheBook.resx">
       <DependentUpon>frmAuthorWhoWroteTheBook.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmBookAdditionalInfo.resx">
+      <DependentUpon>frmBookAdditionalInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBooksWrotedByAuthor.resx">
       <DependentUpon>frmBooksWrotedByAuthor.cs</DependentUpon>
     </EmbeddedResource>
@@ -141,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmBooks.resx">
       <DependentUpon>frmBooks.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMyLibrary.resx">
       <DependentUpon>frmMyLibrary.cs</DependentUpon>
